# module_6

./: .env.sample  README.md  catalog_category_data.json  catalog_product_data.json  groupsdata.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  send_email.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_updated_at.py  0002_product_manufactured_at.py  0003_alter_product_price.py  0004_blogpost_alter_product_preview.py  0005_version.py  0006_alter_version_options_alter_version_name.py  0007_product_author.py  0008_alter_product_options_product_is_published.py
catalog/templates/catalog/: base.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html  category_list.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_navbar.html
catalog/templates/main/: add_product.html  base.html  contacts.html  index.html  product.html
catalog/templates/main/includes/: inc_navbar.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/users/: email_verification_message.html  login.html  register.html  reset_password.html  user_form.html
